# ytdlp_wrapper

./: ._download.py  .env.example  .gitignore  README.md  download.py  pyproject.toml  run_cleanup_test.py  test_retention.py
openspec/: project.md
openspec/changes/add-json-output-mode/: proposal.md  tasks.md
openspec/changes/add-json-output-mode/specs/terminal-ui/: spec.md
openspec/changes/add-json-output-mode/specs/user-documentation/: spec.md
openspec/changes/add-storage-retention/: proposal.md
openspec/changes/add-storage-retention/specs/terminal-ui/: spec.md
openspec/changes/archive/2025-10-15-add-dotenv-support/: proposal.md  tasks.md
openspec/changes/archive/2025-10-15-add-dotenv-support/specs/configuration-management/: spec.md
openspec/changes/archive/2025-10-15-add-readme-documentation/: proposal.md  tasks.md
openspec/changes/archive/2025-10-15-add-readme-documentation/specs/user-documentation/: spec.md
openspec/changes/archive/2025-10-15-add-rich-terminal-output/: proposal.md  tasks.md
openspec/changes/archive/2025-10-15-add-uv-setup/: proposal.md  tasks.md
openspec/changes/archive/2025-10-15-add-webhook-notifications/: proposal.md  tasks.md
openspec/changes/archive/2025-10-20-add-storage-retention/: tasks.md
openspec/specs/configuration-management/: spec.md
openspec/specs/package-management/: spec.md
openspec/specs/storage-management/: spec.md
openspec/specs/terminal-ui/: spec.md
openspec/specs/user-documentation/: spec.md
openspec/specs/webhook-integration/: spec.md
(+5 files in other folders)
